--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,35 @@
 {
-	"name": "nette/web-project",
-	"description": "Nette: Standard Web Project",
-	"keywords": ["nette"],
-	"type": "project",
-	"license": ["MIT", "BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
-	"require": {
-		"php": ">= 7.1",
-		"nette/application": "^3.0",
-		"nette/bootstrap": "^3.0",
-		"nette/caching": "^3.0",
-		"nette/database": "^3.0",
-		"nette/di": "^3.0",
-		"nette/finder": "^2.5",
-		"nette/forms": "^3.0",
-		"nette/http": "^3.0",
-		"nette/mail": "^3.0",
-		"nette/robot-loader": "^3.0",
-		"nette/security": "^3.0",
-		"nette/utils": "^3.0",
-		"latte/latte": "^2.5",
-		"tracy/tracy": "^2.6",
-		"tvaliasek/contributte-forms": "^0.3.2",
-		"imangazaliev/didom": "^1.14"
-	},
-	"require-dev": {
-		"nette/tester": "^2.0"
-	},
-    "repositories": [
-      {
-        "type": "composer",
-        "url": "https://satis.cocodev.cz"
-      }
-    ],
-	"autoload": {
-		"classmap": ["app/Booting.php"]
-	},
-	"minimum-stability": "stable",
-	"config": {
-		"platform": {
-			"php": "7.3"
-		}
-	}
+  "name": "tvaliasek/yabsform",
+  "description": "Another nette forms bootstrap renderer",
+  "keywords": [
+    "nette",
+    "bootstrap",
+    "forms",
+    "renderer"
+  ],
+  "type": "library",
+  "license": [
+    "MIT",
+    "BSD-3-Clause",
+    "GPL-2.0",
+    "GPL-3.0"
+  ],
+  "require": {
+    "php": ">= 7.3",
+    "imangazaliev/didom": "^1.14",
+    "nette/forms": "^3.0",
+    "nette/di": "^3.0",
+    "latte/latte": "^2.5",
+    "nette/application": "^3.0",
+    "nette/utils": "^3.0"
+  },
+  "require-dev": {
+    "nette/tester": "^2.0",
+    "phpstan/phpstan": "^0.11.6"
+  },
+  "autoload": {
+    "psr-4": {
+      "YABSForm\\": "src/"
+    }
+  }
 }
